# reminder

./: README.md  event.cpp  event.h  main.cpp  reminder.cpp  reminder.pro  ui_widget.h  widget.h  widget.ui
libcron/: .Makefile.swp  .cmake_install.cmake.swp  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
libcron/date/: CMakeCache.txt  cmake_install.cmake  dateTargets.cmake
libcron/libcron/: cmake_install.cmake
libcron/libcron/include/libcron/: CronData.h  CronSchedule.h
libcron/libcron/src/: CronData.cpp  CronSchedule.cpp
